--- a/index.html
+++ b/index.html
@@ -173,10 +173,41 @@
       display: none;
       opacity: 0.8;
     }
+
+    #header {
+      position: absolute;
+      background-color: rgba(0, 0, 0, 0.6);
+      height: 45px;
+      top: 0px;
+      left: 0px;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      color: white;
+      z-index: 900;
+    }
+
+    #title_img {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      height: 45px;
+    }
+
+    h1 {
+      color: white;
+      margin: auto;
+    }
   </style>
 </head>
 
 <body>
+  <div id="header">
+    <img id="title_img" src="korup.png" alt="Logo" />
+    <h1 id="big_title">Európske Voľby</h1>
+    <!-- <button id="refresh_button" title="Reset"><i class="fa fa-refresh" style="color:black"></i></button>
+    <button title="Information" id="info_button"><i class="fa fa-info"></i></button> -->
+  </div>
   <div id="mapid">
     <svg>
       <g id="basemap"></g>
@@ -320,8 +351,8 @@
             .html(i.properties.name + `: ` + the_rate)
 
           d3.select(this)
-            .style("stroke-width", 2)
-            .style("stroke", "red")
+            .style("stroke-width", 3)
+            .style("stroke", "white")
         })
         .on("mouseleave", function (d, i) {
           d3.select("#details")
