--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             .style("display", "block")
             .style("left", d.x - 160 + "px")
             .style("top", d.y - 20 + "px")
-            .html(i.properties.name + `: ` + the_rate)
+            .html(i.properties.name + `: ` + the_rate + `%`)
 
           d3.select(this)
             .style("stroke-width", 3)
