--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div id="header">
     <img id="title_img" src="img/korup.png" alt="Logo" />
-    <h1 id="big_title">Európske Voľby 2019</h1>
+    <h1 id="big_title">Európske Voľby</h1>
     <!-- <button id="refresh_button" title="Reset"><i class="fa fa-refresh" style="color:black"></i></button>
     <button title="Information" id="info_button"><i class="fa fa-info"></i></button> -->
   </div>
@@ -62,11 +62,11 @@
       .attr("width", width)
       .attr("height", height);
 
-    const uk_context_data = [{ year: "1979", text: "1979" },
-    { year: "1984", text: "1984" }, { year: "1989", text: "1989" }, 
-    { year: "1994", text: "1994" }, { year: "1999", text: "1999" }, 
-    { year: "2004", text: "2004" }, { year: "2009", text: "2009" }, 
-    { year: "2014", text: "2014" }, { year: "2019", text: "2019" }]
+    const uk_context_data = [{ year: "1979", text: "1979", ucast: 61.99 },
+    { year: "1984", text: "1984" , ucast: 58.98}, { year: "1989", text: "1989", ucast: 58.41 }, 
+    { year: "1994", text: "1994", ucast: 56.67 }, { year: "1999", text: "1999", ucast: 49.51 }, 
+    { year: "2004", text: "2004", ucast: 45.47 }, { year: "2009", text: "2009", ucast: 42.97 }, 
+    { year: "2014", text: "2014", ucast: 42.61 }, { year: "2019", text: "2019", ucast: 50.66 }]
 
     const g = {
       basemap: my_svg.select("g#basemap"),
@@ -81,7 +81,7 @@
       .geoOrthographic()
       .center([2, 54])
       .scale([width * 1.1])
-      .translate([width * 0.4, height / 3]);
+      .translate([width * 0.38, height / 2.6]);
 
     Promise.all([
       d3.csv("data/election.csv"),
@@ -150,14 +150,13 @@
         });
 
       //// timeline
-      console.log(time);
       const margin = { top: 10, right: 20, bottom: 20, left: 20 },
-        time_height = 30;
+        time_height = height - 55;
 
       // append the svg object to the body of the page
       const svg = d3.select("#my_dataviz")
         .append("svg")
-        .attr("width", width + margin.left + margin.right)
+        .attr("width", 200 + margin.left + margin.right)
         .attr("height", time_height + margin.top + margin.bottom)
         .append("g")
         .attr("transform", `translate(${margin.left},${margin.top})`);
@@ -167,26 +166,34 @@
       // X axis
       const x = d3.scaleTime()
         .domain([parseTime(1979), parseTime(2020)])
-        .range([0, width - margin.right - margin.left]);
+        .range([0, time_height - margin.top - margin.bottom]);
+
+      const x_ucast = d3.scaleLinear()
+        .domain([0, 100])
+        .range([0, 100]);
 
       svg.append("g")
-        .attr("transform", `translate(0, ${time_height})`)
-        .call(d3.axisBottom(x).ticks(20));
-
+        .attr("transform", `translate(20, ${0})`)
+        .call(d3.axisLeft(x).ticks(30));
 
       svg.selectAll(".context_line")
         .data(uk_context_data)
         .join(
           enter => enter.append("line")
             .attr("class", "context_line")
-            .attr("x1", function (d) { return x(parseTime(d.year)) })
-            .attr("x2", function (d) { return x(parseTime(d.year)) })
-            .attr("y1", function (d, i) { return 0 })
-            .attr("y2", time_height)
-            .attr("stroke-width", 1)
-            .attr("stroke", "white")
-            .attr("stroke-opacity", 0.3)
-            .attr("stroke-dasharray", "8,8")
+            .attr("y1", function (d) { return x(parseTime(d.year)) + 1 })
+            .attr("y2", function (d) { return x(parseTime(d.year)) + 1 })
+            .attr("x1", function (d, i) { 
+              return 22 
+            })
+            .attr("x2", function (d) {
+              console.log(x_ucast(22 + d.ucast));
+              return x_ucast(d.ucast)
+            })
+            .attr("stroke-width", 8)
+            .attr("stroke", "gray")
+            .attr("stroke-opacity", 1)
+            // .attr("stroke-dasharray", "8,8")
             .attr("opacity", 0)
             .transition().duration(500)
             .attr("opacity", 1)
@@ -208,13 +215,13 @@
         .join(
           enter => enter.append("text")
             .attr("class", "context_text")
-            .attr('text-anchor', 'middle')
+            .attr('text-anchor', 'start')
             .attr("fill", "white")
             .attr("fill-opacity", 1)
             .attr("font-size", "12px")
-            .attr("x", function (d) { return x(parseTime(d.year)) })
-            .attr("y", function (d, i) { return 0})
-            .text(function (d) { return d.text })
+            .attr("y", function (d) { return x(parseTime(d.year)) + 5 })
+            .attr("x", function (d, i) { return x_ucast(d.ucast) + 4})
+            .text(function (d) { return d.ucast + "%"})
             .attr("opacity", 0)
             .transition().duration(500)
             .attr("opacity", 1)
