--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div id="header">
     <img id="title_img" src="img/korup.png" alt="Logo" />
-    <h1 id="big_title">Európske Voľby</h1>
+    <h2 id="big_title">Volebná účasť na Európskych Voľbách</h2>
     <!-- <button id="refresh_button" title="Reset"><i class="fa fa-refresh" style="color:black"></i></button>
     <button title="Information" id="info_button"><i class="fa fa-info"></i></button> -->
   </div>
