--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
       <div class="graphic__vis">
         <div id="details"></div>
-        <!-- <div id="hover_description"></div> -->
         <svg id="visualization">
           <g id="basemap"></g>
           <g id="flights"></g>
@@ -62,6 +61,22 @@
     <div id="separator1" class="overview">
       <div id="ch1_div">
         Peniaze z Europsej Unie
+      </div>
+    </div>
+
+    <div class="graphic1">
+      <div class="graphic__vis__1">
+        <svg id="visualization1"></svg>
+      </div>
+      <div class="graphic__prose__1">
+        <p class="trigger ten" data-step="9" style="height: 600px; font-size: 20px;">Text</p>
+        <p class="trigger eleven" data-step="10" style="height: 600px; font-size: 20px;">Text</p>
+      </div>
+    </div>
+
+    <div id="separator1" class="overview">
+      <div id="ch1_div">
+       Volnost Cestovania 
       </div>
     </div>
 
