--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Zastavme Korupciu</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
