--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-
+  <div id="contentCapsule"></div>
   <div id="header">
     <h1 id="title_header">Európske Voľby 2024</h1>
     <img id="peace_img" src="img/korup.png" alt="PeaceRep Logo" />
@@ -62,23 +62,26 @@
         <div class="trigger one" data-step="0">
           <p> <br>Sest krajín podpisuje zmluvu o
             spoločnom riadení uhoľného a oceliarskeho priemyslu,
-            aby nemohla žiadna krajina
-            obrátiť svoje vojnové zbrane proti inej. </p>
+            aby nemohla žiadna krajina obrátiť svoje vojnové 
+            zbrane proti inej.</p>
         </div>
         <div class="trigger two" data-step="1">
-          <p>K siestim krajinam sa pridava Dansko,<br>
+          <p>K siestim krajinam sa pridava Dansko,
             Irsko a Spojene Kralovstvo.
           </p>
         </div>
         <div class="trigger three" data-step="2">
           <p>
-            Európski občania si po prvýkrát priamo<br>
+            Európski občania si po prvýkrát priamo
             volia poslancov Európskeho parlamentu.
           </p>
         </div>
         <div class="trigger four" data-step="3">
           <p>
-            Do Europskej Unie vstupuje Grecko.
+            K deviatim krajinám Európskych spoločenstiev sa v roku 
+            1981 pridalo Grécko, ktoré splnilo potrebné kritéria 
+            keďže sedem rokov pred tým zvrhlo vojenský režim a 
+            obnovilo demokraciu.
           </p>
         </div>
         <div class="trigger five" data-step="4">
@@ -157,6 +160,7 @@
 
   <script src="js/countries.js"></script>
   <script src="js/d3.v6.min.js"></script>
+  <script src="js/circles.js"></script>
   <script src="js/noframework.waypoints.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/scrollerVis.js"></script>
