--- a/index.html
+++ b/index.html
@@ -60,10 +60,25 @@
 
       <div class="graphic__prose">
         <div class="trigger one" data-step="0">
-          <p> <br>Sest krajín podpisuje zmluvu o
-            spoločnom riadení uhoľného a oceliarskeho priemyslu,
-            aby nemohla žiadna krajina obrátiť svoje vojnové 
-            zbrane proti inej.</p>
+          <p id="paragraph1">Po prejave Roberta Schumana,
+            francúzskeho ministra zahraničných vecí, podpísalo šesť
+            krajín zmluvu o spoločnom riadení uhoľného a
+            oceliarskeho priemyslu.
+            <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button></p>
+          <p id="paragraph2" class="additional-content hidden">Týmto chceli zabezpečiť,
+            aby nemohla žiadna krajina obrátiť svoje vojnové zbrane proti inej.
+            Týmito šiestimi krajinami sú Nemecko, Francúzsko, Taliansko,
+            Holandsko, Belgicko a Luxembursko. Európske spoločenstvo uhlia a
+            ocele začalo fungovať od roku 1952.</p>
+        </div>
+        <div class="one_half" >
+          <p id="paragraph15">Nadväzujúc na úspech Zmluvy o založení Európskeho spoločenstva 
+            uhlia a ocele rozširuje 6 zakladajúcich krajín svoju spoluprácu na ďalšie 
+            hospodárske odvetvia.<button id="more_info" onclick="toggleContent('one_half', 'paragraph15', 'paragraph25')">viac</button>
+          </p>
+          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv, ktorými sa zakladá 
+            Európske hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre 
+            atómovú energiu (Euratom). Tieto orgány začali fungovať 1. januára 1958.</p>
         </div>
         <div class="trigger two" data-step="1">
           <p>K siestim krajinam sa pridava Dansko,
@@ -71,17 +86,26 @@
           </p>
         </div>
         <div class="trigger three" data-step="2">
-          <p>
-            Európski občania si po prvýkrát priamo
-            volia poslancov Európskeho parlamentu.
+          <p id="paragraph3">
+            Občania si prvýkrát priamo volia poslancov 
+            Európskeho parlamentu. Dovtedy menovali poslancov 
+            národné parlamenty.<button id="more_info" onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
+          </p>
+          <p id="paragraph4" class="additional-content hidden">
+            Poslanci sa združujú v celoeurópskych politických skupinách, nie v národných delegáciách.
           </p>
         </div>
         <div class="trigger four" data-step="3">
-          <p>
-            K deviatim krajinám Európskych spoločenstiev sa v roku 
-            1981 pridalo Grécko, ktoré splnilo potrebné kritéria 
-            keďže sedem rokov pred tým zvrhlo vojenský režim a 
-            obnovilo demokraciu.
+          <p id="paragraph5">
+            K deviatim krajinám Európskeho spoločenstva sa v roku
+            1981 pridalo Grécko, ktoré splnilo potrebné kritéria
+            keďže sedem rokov pred tým zvrhlo vojenský režim a
+            obnovilo demokraciu. <button id="more_info" onclick="toggleContent('four', 'paragraph5', 'paragraph6')">viac</button>
+          </p>
+          <p id="paragraph6" class="additional-content hidden">
+            Pokračovalo aj napätie medzi Západom a Východom. USA a ZSSR sa
+             stále snažili udržať strategickú rovnováhu, čo spôsobovalo isté 
+             obavy v Európe v súvislosti s bezpečnosťou a možnými geopolitickými konfliktmi.
           </p>
         </div>
         <div class="trigger five" data-step="4">
