--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
           <p id="paragraph1">Po prejave Roberta Schumana,
             francúzskeho ministra zahraničných vecí, podpísalo šesť
             krajín zmluvu o spoločnom riadení uhoľného a
-            oceliarskeho priemyslu.
+            oceliarskeho priemyslu.</br>
             <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button></p>
           <p id="paragraph2" class="additional-content hidden">Týmto chceli zabezpečiť,
             aby nemohla žiadna krajina obrátiť svoje vojnové zbrane proti inej.
             Týmito šiestimi krajinami sú Nemecko, Francúzsko, Taliansko,
             Holandsko, Belgicko a Luxembursko. Európske spoločenstvo uhlia a
-            ocele začalo fungovať od roku 1952.</p>
+            ocele začalo fungovať od roku 1952.</br></p>
         </div>
         <div class="one_half" >
           <p id="paragraph15">Nadväzujúc na úspech Zmluvy o založení Európskeho spoločenstva 
@@ -89,7 +89,7 @@
           <p id="paragraph3">
             Občania si prvýkrát priamo volia poslancov 
             Európskeho parlamentu. Dovtedy menovali poslancov 
-            národné parlamenty.<button id="more_info" onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
+            národné parlamenty.</br><button id="more_info" onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
           </p>
           <p id="paragraph4" class="additional-content hidden">
             Poslanci sa združujú v celoeurópskych politických skupinách, nie v národných delegáciách.
@@ -117,6 +117,17 @@
         <div class="trigger six" data-step="5">
         </div>
         <div class="trigger seven" data-step="6">
+          <p id="paragraph9">
+            Pádom Berlínskeho múru dochádza po 28 rokoch k otvoreniu hraníc 
+            medzi Východom a Západnom. Nemecko je po viac ako 40 rokoch 
+            zjednotené a jeho východná časť sa v októbri 1990 pripája k 
+            Európskym spoločenstvám.<button id="more_info" onclick="toggleContent('seven', 'paragraph9', 'paragraph10')">viac</button>
+          </p>
+          <p id="paragraph10" class="additional-content hidden">
+            V novembri 1989 vypukla v Československu tzv. Nežná revolúcia, ktorá priniesla pád 
+            komunistického režimu. Slovensko sa aktívne zapojilo do udalostí, 
+            ktoré vyvrcholili nástupom demokracie a zrušením jednej straníckej vlády.
+          </p>
         </div>
         <div class="trigger eight" data-step="7">
         </div>
