--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div id="ind_line"></div>
         <div id="perm">
           <h3 style="margin: 0px;">Legenda</h3>
-          Cim jasnejsia farba, tym</br>
-          vacsia ucast na volbach.</br>
-          Prejdi mysou nad krajinu.
+          Čím jasnejšia farba, tým</br>
+          väčšia účasť na EuroVoľbách.</br>
+          Prejdi myšou nad krajinu.
         </div>
         <div id="perm2"></div>
         <svg id="visualization">
@@ -64,90 +64,122 @@
             francúzskeho ministra zahraničných vecí, podpísalo šesť
             krajín zmluvu o spoločnom riadení uhoľného a
             oceliarskeho priemyslu.</br>
-            <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button></p>
+            <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button>
+          </p>
           <p id="paragraph2" class="additional-content hidden">Týmto chceli zabezpečiť,
             aby nemohla žiadna krajina obrátiť svoje vojnové zbrane proti inej.
-            Týmito šiestimi krajinami sú Nemecko, Francúzsko, Taliansko,
+            Týmito šiestimi krajinami boli Nemecko, Francúzsko, Taliansko,
             Holandsko, Belgicko a Luxembursko. Európske spoločenstvo uhlia a
             ocele začalo fungovať od roku 1952.</br></p>
         </div>
-        <div class="one_half" >
-          <p id="paragraph15">Nadväzujúc na úspech Zmluvy o založení Európskeho spoločenstva 
-            uhlia a ocele rozširuje 6 zakladajúcich krajín svoju spoluprácu na ďalšie 
-            hospodárske odvetvia.<button id="more_info" onclick="toggleContent('one_half', 'paragraph15', 'paragraph25')">viac</button>
+        <div class="one_half">
+          <p id="paragraph15">Nadväzujúc na úspech Zmluvy o založení Európskeho spoločenstva
+            uhlia a ocele rozširuje 6 zakladajúcich krajín svoju spoluprácu na ďalšie
+            hospodárske odvetvia.</br><button id="more_info"
+              onclick="toggleContent('one_half', 'paragraph15', 'paragraph25')">viac</button>
           </p>
-          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv, ktorými sa zakladá 
-            Európske hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre 
+          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv, ktorými sa zakladá
+            Európske hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre
             atómovú energiu (Euratom). Tieto orgány začali fungovať 1. januára 1958.</p>
         </div>
         <div class="trigger two" data-step="1">
-          <p>K siestim krajinam sa pridava Dansko,
-            Irsko a Spojene Kralovstvo.
+          <p>K šiestim zakladajúcim krajinám sa pridávajú Dánsko,
+            Írsko a Spojené Kraľovstvo.
           </p>
         </div>
         <div class="trigger three" data-step="2">
           <p id="paragraph3">
-            Občania si prvýkrát priamo volia poslancov 
-            Európskeho parlamentu. Dovtedy menovali poslancov 
-            národné parlamenty.</br><button id="more_info" onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
+            Občania si prvýkrát priamo volia poslancov
+            Európskeho parlamentu. Dovtedy menovali poslancov
+            národné parlamenty.</br><button id="more_info"
+              onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
           </p>
           <p id="paragraph4" class="additional-content hidden">
-            Poslanci sa združujú v celoeurópskych politických skupinách, nie v národných delegáciách.
+            Poslanci sa združujú v celoeurópskych politických skupinách, nie v národných delegáciách.</br>
           </p>
         </div>
         <div class="trigger four" data-step="3">
           <p id="paragraph5">
             K deviatim krajinám Európskeho spoločenstva sa v roku
-            1981 pridalo Grécko, ktoré splnilo potrebné kritéria
-            keďže sedem rokov pred tým zvrhlo vojenský režim a
-            obnovilo demokraciu. <button id="more_info" onclick="toggleContent('four', 'paragraph5', 'paragraph6')">viac</button>
+            1981 pridalo Grécko, ktoré splnilo kritéria
+            keď sedem rokov pred tým zvrhlo vojenský režim a
+            obnovilo demokraciu.</br><button id="more_info"
+              onclick="toggleContent('four', 'paragraph5', 'paragraph6')">viac</button>
           </p>
           <p id="paragraph6" class="additional-content hidden">
             Pokračovalo aj napätie medzi Západom a Východom. USA a ZSSR sa
-             stále snažili udržať strategickú rovnováhu, čo spôsobovalo isté 
-             obavy v Európe v súvislosti s bezpečnosťou a možnými geopolitickými konfliktmi.
+            stále snažili udržať strategickú rovnováhu, čo spôsobovalo
+            v Európe obavy z možnýmch geopolitických konfliktov.</br>
           </p>
         </div>
         <div class="trigger five" data-step="4">
           <p>
-            V druhych Europskych Volbach uz volia aj
-            obcania Grecka.
+            V deiatich krajinách Európy sa konajú už druhé priame voľby do
+            Európskeho parlamentu. Svojich zástupcov a zástupkyne volí aj Grécko,
+            s celkovou účasťou 80.59%.
           </p>
         </div>
         <div class="trigger six" data-step="5">
+          <p>
+            Portugalsko a Španielsko upevňujú demokraciu a pristupujú do EHS.
+            Budúcu Európsku úniu tak tvorí už 12 štátov v Európe.
+          </p>
         </div>
         <div class="trigger seven" data-step="6">
           <p id="paragraph9">
-            Pádom Berlínskeho múru dochádza po 28 rokoch k otvoreniu hraníc 
-            medzi Východom a Západnom. Nemecko je po viac ako 40 rokoch 
-            zjednotené a jeho východná časť sa v októbri 1990 pripája k 
-            Európskym spoločenstvám.<button id="more_info" onclick="toggleContent('seven', 'paragraph9', 'paragraph10')">viac</button>
+            Okrem protikomunistiských revolúcií v satelitoch
+            Sovietskeho Zväzu, ktoré vedú k pádu Železnej Opony sa v roku
+            1989 konajú ďalšie voľby do Európskeho Parlementu.</br>
+            <button id="more_info" onclick="toggleContent('seven', 'paragraph9', 'paragraph10')">viac</button>
           </p>
           <p id="paragraph10" class="additional-content hidden">
-            V novembri 1989 vypukla v Československu tzv. Nežná revolúcia, ktorá priniesla pád 
-            komunistického režimu. Slovensko sa aktívne zapojilo do udalostí, 
-            ktoré vyvrcholili nástupom demokracie a zrušením jednej straníckej vlády.
+            V novembri 1989 vypukla v Československu tzv. Nežná revolúcia, ktorá priniesla pád
+            komunistického režimu. Slovensko sa aktívne zapojilo do udalostí,
+            ktoré vyvrcholili nástupom demokracie a zrušením jednej straníckej vlády.</br>
           </p>
         </div>
-        <div class="trigger eight" data-step="7">
+        <div class="trigger seven_half" data-step="7">
+          <p id="paragraph11">
+            Európska únia bola oficiálne založená Maastrichtskou zmluvou,
+            ktorá vstúpila do platnosti 1. Novembra 1993.
+          </p>
         </div>
-        <div class="trigger nine" data-step="8">
+        <div class="trigger eight" data-step="8">
+          <p id="paragraph12">
+            Okrem volieb do Európskeho parlementu bola
+            na stole aj otázka rozšírenia EÚ na strednú a východnú Európu.
+          </p>
         </div>
-        <div class="trigger ten" data-step="9">
+        <div class="trigger nine" data-step="9">
+          <p id="paragraph12">
+            Prvé rozšírenie už Európskej únie tvorilo Rakúsko, Fínsko a Švédsko.
+          </p>
         </div>
-        <div class="trigger eleven" data-step="10">
+        <div class="trigger ten" data-step="10">
+          <p id="paragraph13">
+            Okrem Eurovolieb sa v Únii zavádza euro. Zatiaľ však len pre
+            obchodné a finančné transakcie.</br>
+            <button id="more_info" onclick="toggleContent('ten', 'paragraph13', 'paragraph14')">viac</button>
+          </p>
+          <p id="paragraph14" class="additional-content hidden">
+          Bankovky a mince budú zavedené neskôr.
+          Do eurozóny sa zapojí 11 krajín, no Dánsko, Švédsko a 
+          Spojené kráľovstvo sa rozhodnú počkať.</br>
+          </p>
         </div>
-        <div class="trigger twelve" data-step="11">
+        <div class="trigger eleven" data-step="11">
         </div>
-        <div class="trigger thirteen" data-step="12">
+        <div class="trigger twelve" data-step="12">
         </div>
-        <div class="trigger fourteen" data-step="13">
+        <div class="trigger thirteen" data-step="13">
         </div>
-        <div class="trigger fifteen" data-step="14">
+        <div class="trigger fourteen" data-step="14">
         </div>
-        <div class="trigger sixteen" data-step="15">
+        <div class="trigger fifteen" data-step="15">
         </div>
-        <div class="trigger seventeen" data-step="16" style="height: 700px;">
+        <div class="trigger sixteen" data-step="16">
+        </div>
+        <div class="trigger seventeen" data-step="17" style="height: 700px;">
         </div>
       </div>
 
